--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <div id="app">
-      <a href="src/day1.html">Day 1</a>
-      <a href="src/day2.html">Day 2</a>
+      <a href="./day1.html">Day 1</a>
+      <a href="./day2.html">Day 2</a>
     </div>
   </body>
 </html>
