--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="main.css" rel="stylesheet" />
     <title>100 days of CSS</title>
   </head>
-  <body>
-    <div id="app">
-      <a href="./day1.html">Day 1</a>
-      <a href="./day2.html">Day 2</a>
+  <body class="h-screen w-screen">
+    <div class="flex flex-col flex-nowrap justify-center items-center h-48 p-4 w-full font-bold text-2xl">
+      <div>Kendrick's 100 days of CSS</div>
+      <div class="text-lg">Made with TailwindCSS</div>
     </div>
+    <div id="app" class="flex flex-wrap h-full w-full gap-4 p-5">
+      <a href="./day1.html" class="flex flex-1/4 h-1/3 p-2 border-0 rounded-md bg-[url('../public/images/day1.png')] bg-cover bg-center justify-center items-end group">
+        <div class="hidden group-hover:block text-white text-md font-extrabold">
+          Day 1
+        </div>
+      </a>
+      <a href="./day2.html" class="flex flex-1/4 h-1/3 p-2 border-0 rounded-md bg-[url('../public/images/day2.gif')] bg-cover bg-center justify-center items-end group">
+        <div class="hidden group-hover:block text-white text-md font-extrabold">
+          Day 2
+        </div>
+      </a>
   </body>
 </html>
