--- a/src/index.html
+++ b/src/index.html
@@ -10,16 +10,29 @@
     <div class="flex flex-col flex-nowrap justify-center items-center h-48 p-4 w-full font-bold text-2xl">
       <div>Kendrick's 100 days of CSS</div>
       <div class="text-lg">Made with TailwindCSS</div>
+      <div class="text-lg">Based on the <a href="https://100dayscss.com/" class="underline">Easing Wizard's 100 days css challenge</a></div>
     </div>
     <div id="app" class="flex flex-wrap h-full w-full gap-4 p-5">
-      <a href="./day1.html" class="flex flex-1/4 h-1/3 p-2 border-0 rounded-md bg-[url('../public/images/day1.png')] bg-cover bg-center justify-center items-end group">
-        <div class="hidden group-hover:block text-white text-md font-extrabold">
-          Day 1
+      <a href="./day1.html" class="flex flex-1/4 h-1/3 p-2 border-0 rounded-md bg-[url('../public/images/day1.png')] bg-cover bg-center group">
+        <div class="hidden group-hover:block text-white text-md font-extrabold h-full w-full p-4 bg-zinc-600/75 justify-items-center">
+          <div class="mb-2">Day 1</div>
+          <div class="text-justify text-sm">
+            This challenge was about 2 things
+            <ul class="list-disc ml-6">
+              <li>Making a background gradient</li>
+              <li>Build the 100 out of divs, matching the example</li>
+            </ul>
+          </div>
         </div>
       </a>
       <a href="./day2.html" class="flex flex-1/4 h-1/3 p-2 border-0 rounded-md bg-[url('../public/images/day2.gif')] bg-cover bg-center justify-center items-end group">
-        <div class="hidden group-hover:block text-white text-md font-extrabold">
-          Day 2
+        <div class="hidden group-hover:block text-white text-md font-extrabold h-full w-full p-4 bg-zinc-600/75 justify-items-center">
+          <div class="mb-2">Day 1</div>
+          <div class="text-justify text-sm">
+            I have always wanted to do this, but never had a reason to.<br />
+            This project animated a hamburger menu icon to switch to a closing icon when clicked. 
+            It also had to revert back.  I learned that the transition: transform property can't handle translate and rotate separately, and had to use css animations instead.
+          </div>
         </div>
       </a>
   </body>
