minor tweet to text layout

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       <a href="./day1.html" class="flex flex-1/4 h-1/3 p-2 border-0 rounded-md bg-[url('../public/images/day1.png')] bg-cover bg-center group">
         <div class="hidden group-hover:block text-white text-md font-extrabold h-full w-full p-4 bg-zinc-600/75 justify-items-center">
           <div class="mb-2">Day 1</div>
-          <div class="text-justify text-sm">
+          <div class="text-justify text-sm w-full">
             This challenge was about 2 things
             <ul class="list-disc ml-6">
               <li>Making a background gradient</li>
@@ -28,7 +28,7 @@
       <a href="./day2.html" class="flex flex-1/4 h-1/3 p-2 border-0 rounded-md bg-[url('../public/images/day2.gif')] bg-cover bg-center justify-center items-end group">
         <div class="hidden group-hover:block text-white text-md font-extrabold h-full w-full p-4 bg-zinc-600/75 justify-items-center">
           <div class="mb-2">Day 1</div>
-          <div class="text-justify text-sm">
+          <div class="text-justify text-sm w-full">
             I have always wanted to do this, but never had a reason to.<br />
             This project animated a hamburger menu icon to switch to a closing icon when clicked. 
             It also had to revert back.  I learned that the transition: transform property can't handle translate and rotate separately, and had to use css animations instead.
