fix animation issue with day2, restructure project a bit

--- a/src/day1/index.html
+++ b/src/day1/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="main.css" rel="stylesheet" />
     <title>Day 1</title>
   </head>
   <body class="h-svh w-svw">
     <div id="frame" class="h-screen w-screen bg-gradient-to-tr from-indigo-800 to-teal-400 flex justify-center items-center">
+      <a href="../" class="fixed top-2 left-2 border-2 border-amber-50 bg-amber-100 px-3 py-1 rounded-lg font-bold">Back</a>
       <div class="">
         <div class="h-fit w-fit">
           <div class="relative z-1 h-[40px] w-[22px] bg-white drop-shadow-md drop-shadow-gray-400 rounded-sm rotate-225 translate-y-10 -translate-x-4"></div>
@@ -22,5 +22,6 @@
         </div>
       </div>
     </div>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
