--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="main.css" rel="stylesheet" />
+    <link href="./main.css" rel="stylesheet" />
     <title>100 days of CSS</title>
   </head>
   <body class="h-screen w-screen">
@@ -13,7 +13,7 @@
       <div class="text-lg">Based on the <a href="https://100dayscss.com/" class="underline">Easing Wizard's 100 days css challenge</a></div>
     </div>
     <div id="app" class="flex flex-wrap h-full w-full gap-4 p-5">
-      <a href="./day1.html" class="flex flex-1/4 h-1/3 p-2 border-0 rounded-md bg-[url('../public/images/day1.png')] bg-cover bg-center group">
+      <a href="./day1/" class="flex flex-1/4 h-1/3 p-2 border-0 rounded-md bg-[url('../public/images/day1.png')] bg-cover bg-center group">
         <div class="hidden group-hover:block text-white text-md font-extrabold h-full w-full p-4 bg-zinc-600/75 justify-items-center">
           <div class="mb-2">Day 1</div>
           <div class="text-justify text-sm">
@@ -25,9 +25,9 @@
           </div>
         </div>
       </a>
-      <a href="./day2.html" class="flex flex-1/4 h-1/3 p-2 border-0 rounded-md bg-[url('../public/images/day2.gif')] bg-cover bg-center justify-center items-end group">
+      <a href="./day2/" class="flex flex-1/4 h-1/3 p-2 border-0 rounded-md bg-[url('../public/images/day2.gif')] bg-cover bg-center justify-center items-end group">
         <div class="hidden group-hover:block text-white text-md font-extrabold h-full w-full p-4 bg-zinc-600/75 justify-items-center">
-          <div class="mb-2">Day 1</div>
+          <div class="mb-2">Day 2</div>
           <div class="text-justify text-sm">
             I have always wanted to do this, but never had a reason to.<br />
             This project animated a hamburger menu icon to switch to a closing icon when clicked. 
