--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       <div class="text-lg">Based on the <a href="https://100dayscss.com/" class="underline">Easing Wizard's 100 days css challenge</a></div>
     </div>
     <div id="app" class="flex flex-wrap h-full w-full gap-4 p-5">
-      <a href="./day1/" class="flex flex-1/4 h-1/3 p-2 border-0 rounded-md bg-[url('../public/images/day1.png')] bg-cover bg-center group">
+      <a href="./day1/index.html" class="flex flex-1/4 h-1/3 p-2 border-0 rounded-md bg-[url('../public/images/day1.png')] bg-cover bg-center group">
         <div class="hidden group-hover:block text-white text-md font-extrabold h-full w-full p-4 bg-zinc-600/75 justify-items-center">
           <div class="mb-2">Day 1</div>
           <div class="text-justify text-sm">
@@ -25,7 +25,7 @@
           </div>
         </div>
       </a>
-      <a href="./day2/" class="flex flex-1/4 h-1/3 p-2 border-0 rounded-md bg-[url('../public/images/day2.gif')] bg-cover bg-center justify-center items-end group">
+      <a href="./day2/index.html" class="flex flex-1/4 h-1/3 p-2 border-0 rounded-md bg-[url('../public/images/day2.gif')] bg-cover bg-center justify-center items-end group">
         <div class="hidden group-hover:block text-white text-md font-extrabold h-full w-full p-4 bg-zinc-600/75 justify-items-center">
           <div class="mb-2">Day 2</div>
           <div class="text-justify text-sm">
