--- a/src/index.html
+++ b/src/index.html
@@ -35,5 +35,13 @@
           </div>
         </div>
       </a>
+      <a href="./day3/index.html" class="flex flex-1/4 h-1/3 p-2 border-0 rounded-md bg-[url('../public/images/day3.gif')] bg-cover bg-center justify-center items-end group">
+        <div class="hidden group-hover:block text-white text-md font-extrabold h-full w-full p-4 bg-zinc-600/75 justify-items-center">
+          <div class="mb-2">Day 3</div>
+          <div class="text-justify text-sm">
+            
+          </div>
+        </div>
+      </a>
   </body>
 </html>
