added day3 shadow

--- a/src/day3/index.html
+++ b/src/day3/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Day 2</title>
+    <title>Day 3</title>
   </head>
   <body class="h-svh w-svw">
     <div id="frame" class="h-screen w-scree flex justify-center items-center bg-black">
@@ -18,7 +18,9 @@
             <div class="absolute right-[2.5%] h-[25px] w-[25px] rounded-full bg-gray-200 shadow-[0_0_2em_#e5e7eb]"></div>
           </div>
         </div>
-        <div class="w-full h-[80px] bg-amber-200"></div>
+        <div class="w-full h-[80px] bg-amber-200">
+          <div class="w-full h-full bg-stone-600 opacity-40 animate-[moveShadow_8s_linear_infinite] [clip-path:polygon(20%_0%,80%_0,90%_40%)]"></div>
+        </div>
         <div class="absolute w-full h-full top-0 left-0 bg-stone-50 [clip-path:polygon(20%_60%,50%_30%,65%_60%)]"></div>
         <div class="absolute w-full h-full top-0 left-0 bg-stone-400 [clip-path:polygon(65%_60%,50%_30%,80%_60%)]"></div>
       </div>
