fix layout issues with landing page and title of day 3

--- a/src/day3/index.html
+++ b/src/day3/index.html
@@ -6,7 +6,7 @@
     <title>Day 3</title>
   </head>
   <body class="h-svh w-svw">
-    <div id="frame" class="h-screen w-scree flex justify-center items-center bg-black">
+    <div id="frame" class="h-screen w-screen flex justify-center items-center bg-black">
       <a href="../" class="fixed top-2 left-2 border-2 border-amber-50 bg-amber-100 px-3 py-1 rounded-lg font-bold">Back</a>
       <div class="relative h-[200px] w-[200px] rounded-full overflow-hidden">
         
