--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
       <div class="text-lg">Made with TailwindCSS</div>
       <div class="text-lg">Based on the <a href="https://100dayscss.com/" class="underline">Easing Wizard's 100 days css challenge</a></div>
     </div>
-    <div id="app" class="flex flex-wrap h-full w-full gap-4 p-5">
-      <a href="./day1/index.html" class="flex flex-1/4 h-1/3 p-2 border-0 rounded-md bg-[url('../public/images/day1.png')] bg-cover bg-center group">
+    <div id="app" class="grid grid-cols-3 content-start gap-4 h-full w-full p-5">
+      <a href="./day1/index.html" class="h-[300px] p-2 border-0 rounded-md bg-[url('../public/images/day1.png')] bg-cover bg-center group">
         <div class="hidden group-hover:block text-white text-md font-extrabold h-full w-full p-4 bg-zinc-600/75 justify-items-center">
           <div class="mb-2">Day 1</div>
           <div class="text-justify text-sm">
@@ -25,7 +25,7 @@
           </div>
         </div>
       </a>
-      <a href="./day2/index.html" class="flex flex-1/4 h-1/3 p-2 border-0 rounded-md bg-[url('../public/images/day2.gif')] bg-cover bg-center justify-center items-end group">
+      <a href="./day2/index.html" class="h-[300px] p-2 border-0 rounded-md bg-[url('../public/images/day2.gif')] bg-cover bg-center justify-center items-end group">
         <div class="hidden group-hover:block text-white text-md font-extrabold h-full w-full p-4 bg-zinc-600/75 justify-items-center">
           <div class="mb-2">Day 2</div>
           <div class="text-justify text-sm">
@@ -35,11 +35,20 @@
           </div>
         </div>
       </a>
-      <a href="./day3/index.html" class="flex flex-1/4 h-1/3 p-2 border-0 rounded-md bg-[url('../public/images/day3.gif')] bg-cover bg-center justify-center items-end group">
+      <a href="./day3/index.html" class="h-[300px] p-2 border-0 rounded-md bg-[url('../public/images/day3.gif')] bg-cover bg-center justify-center items-end group">
         <div class="hidden group-hover:block text-white text-md font-extrabold h-full w-full p-4 bg-zinc-600/75 justify-items-center">
           <div class="mb-2">Day 3</div>
           <div class="text-justify text-sm">
-            
+            This animation originally was just the sun rise and set that faded to black, but isn't it much better with the moon coming out?  Well at least I like to think it is.  
+            The triangle shapes in this were made with clip-path polygon, which was a new css property to me.  Now I feel I can really make any shape I want.... cue evil laugh here.
+          </div>
+        </div>
+      </a>
+      <a href="./day4/index.html" class="h-[300px] p-2 border-0 rounded-md bg-[url('../public/images/day3.gif')] bg-cover bg-center justify-center items-end group">
+        <div class="hidden group-hover:block text-white text-md font-extrabold h-full w-full p-4 bg-zinc-600/75 justify-items-center">
+          <div class="mb-2">Day 4</div>
+          <div class="text-justify text-sm">
+            This one feels like a flower blooming to me, maybe that will be a project in the future.
           </div>
         </div>
       </a>
