--- a/src/index.html
+++ b/src/index.html
@@ -52,5 +52,15 @@
           </div>
         </div>
       </a>
+      <a href="./day5/index.html" class="h-[300px] p-2 border-0 rounded-md bg-[url('../public/images/day5.png')] bg-cover bg-center justify-center items-end group">
+        <div class="hidden group-hover:block text-white text-md font-extrabold h-full w-full p-4 bg-zinc-600/75 justify-items-center">
+          <div class="mb-2">Day 5</div>
+          <div class="text-justify text-sm">
+            The line chart, a very practical example and fun to do this without a library. I used the html elements svg and polyline to complete this one.  One this I had to learn was how to make this responsive.  
+            The viewBox property on svg really made this possible.  Getting the the points and the different line segements to line up too a lot of math.
+            I definitely would have preferred to use some javascript to calculate these values, but really trying to just flex my html/css muscles here.
+          </div>
+        </div>
+      </a>
   </body>
 </html>
