fix some responsive issues

--- a/src/day5/index.html
+++ b/src/day5/index.html
@@ -9,21 +9,17 @@
     <div id="frame" class="h-screen w-screen flex justify-center items-center bg-teal-600">
       <a href="../" class="fixed top-2 left-2 border-2 border-amber-50 bg-amber-100 px-3 py-1 rounded-lg font-bold">Back</a>
       <div class="h-[80%] w-[80%]">
-        <div class="bg-orange-300 w-full h-1/4 p-[5%] text-white grid grid-cols-2 grid-rows-2 gap-3 content-start">
-          <!-- <div class="flex-[100%] flex text-start"> -->
-            <span class="flex-1 text-3xl font-extrabold content-end">WEEKLY REPORT</span>
-            <span class="flex-1 text-xl content-end text-end">Revenue</span>
-          <!-- </div>
-          <div class="flex-[100%] flex text-end"> -->
+        <div class="bg-orange-300 w-full h-1/4 p-[5%] text-white flex flex-wrap md:grid md:grid-cols-2 md:grid-rows-2 gap-1 md:gap-3 content-start">
+            <span class="flex-[100%] text-3xl font-extrabold text-center md:text-left mb-4 md:mb-0 md:content-end">WEEKLY REPORT</span>
+            <span class="flex-[100%] text-xl content-end text-end">Revenue</span>
             <span class="flex-1 text-xl">01 Apr - 07 Apr</span>
             <span class="flex-1 text-2xl font-bold text-end">$ 3621.79</span>
-          <!-- </div> -->
         </div>
         <div class="bg-white w-full h-3/4 px-[5%] relative">
           <div class="w-full h-1/4 border-b-2 border-gray-200 text-gray-500 flex">
-            <div class="flex-1/2"></div>
-            <div class="flex-1/4 text-end content-center"><span class="bg-red-600 mr-3 px-4 rounded-lg text-[8px]"></span>Views</div>
-            <div class="flex-1/4 text-end content-center"><span class="bg-blue-400 mr-3 px-4 rounded-lg text-[8px]"></span>Purchases</div>
+            <div class="flex-1/2 hidden md:block"></div>
+            <div class="flex-1/2 md:flex-1/4 text-end content-center"><span class="bg-red-600 mr-3 px-4 rounded-lg text-[8px]"></span>Views</div>
+            <div class="flex-1/2 md:flex-1/4 text-end content-center"><span class="bg-blue-400 mr-3 px-4 rounded-lg text-[8px]"></span>Purchases</div>
           </div>
           <div class="w-full h-1/4 border-b-2 border-gray-200"></div>
           <div class="w-full h-1/4 border-b-2 border-gray-200"></div>
