--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       <div class="text-lg">Made with TailwindCSS</div>
       <div class="text-lg">Based on the <a href="https://100dayscss.com/" class="underline">Easing Wizard's 100 days css challenge</a></div>
     </div>
-    <div id="app" class="grid grid-cols-3 content-start gap-4 h-full w-full p-5">
+    <div id="app" class="grid grid-cols-1 md:grid-cols-3 content-start gap-4 h-full w-full p-5">
       <a href="./day1/index.html" class="h-[300px] p-2 border-0 rounded-md bg-[url('../public/images/day1.png')] bg-cover bg-center group">
         <div class="hidden group-hover:block text-white text-md font-extrabold h-full w-full p-4 bg-zinc-600/75 justify-items-center">
           <div class="mb-2">Day 1</div>
