--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,11 @@
     <link href="./main.css" rel="stylesheet" />
     <title>100 days of CSS</title>
   </head>
-  <body class="h-screen w-screen">
-    <div class="flex flex-col flex-nowrap justify-center items-center h-48 p-4 w-full font-bold text-2xl">
-      <div>Kendrick's 100 days of CSS</div>
+  <body class="h-full w-full py-2">
+    <div class="flex flex-col flex-nowrap justify-center items-center h-36 p-4 w-full font-bold text-2xl">
+      <div class="mb-3">Kendrick's 100 days of CSS</div>
       <div class="text-lg">Made with TailwindCSS</div>
-      <div class="text-lg">Based on the <a href="https://100dayscss.com/" class="underline">Easing Wizard's 100 days css challenge</a></div>
+      <div class="text-lg text-center">Based on the <a href="https://100dayscss.com/" class="underline">Easing Wizard's 100 days css challenge</a></div>
     </div>
     <div id="app" class="grid grid-cols-1 md:grid-cols-3 content-start gap-4 h-full w-full p-5">
       <a href="./day1/index.html" class="h-[300px] p-2 border-0 rounded-md bg-[url('../public/images/day1.png')] bg-cover bg-center group">
