--- a/src/index.html
+++ b/src/index.html
@@ -62,5 +62,13 @@
           </div>
         </div>
       </a>
+      <a href="./day6/index.html" class="h-[300px] p-2 border-0 rounded-md bg-[url('../public/images/day6.png')] bg-cover bg-center justify-center items-end group">
+        <div class="hidden group-hover:block text-white text-md font-extrabold h-full w-full p-4 bg-zinc-600/75 justify-items-center">
+          <div class="mb-2">Day 6</div>
+          <div class="text-justify text-sm">
+            TBD
+          </div>
+        </div>
+      </a>
   </body>
 </html>
