fix responsive issues, fix safari issues

--- a/src/day6/index.html
+++ b/src/day6/index.html
@@ -10,7 +10,7 @@
       <a href="../" class="fixed top-2 left-2 border-2 border-amber-50 bg-amber-100 px-3 py-1 rounded-lg font-bold">Back</a>
       <div class="h-96 w-96 bg-white shadow-2xl rounded-md grid grid-cols-5 grid-rows-3 gap-0.5">
         <div class="col-span-3 row-span-3 content-center justify-items-center">
-          <div class="h-28 w-28 mb-4 border-1 border-r-transparent p-0.5 transition-transform hover:rotate-360 duration-1000 ease-in-out rounded-full group">
+          <div class="mx-auto h-28 w-28 mb-4 border-1 border-r-transparent p-0.5 transition-transform hover:rotate-360 duration-1000 ease-in-out rounded-full group">
             <div class="h-full w-full border-1 border-l-transparent p-0.5 transition-transform group-hover:-rotate-720 duration-1000 ease-in-out rounded-full">
               <div class="h-full w-full rounded-full bg-[url('../../public/images/aurora.png')] bg-center bg-cover transistion-transform group-hover:rotate-360 duration-1000 ease-in-out"></div>
             </div>
@@ -20,8 +20,8 @@
             <div class="font-light text-xs">Cutest Kitten</div>
           </div>
           <div>
-            <div class="px-10 py-2 mb-3 border-1 rounded-4xl text-xs font-bold bg-white text-stone-500 hover:bg-stone-500 hover:text-white transition-colors duration-500 ease-in-out">Follow</div>
-            <div class="px-10 py-2 border-1 rounded-4xl text-xs font-bold bg-white text-stone-500 hover:bg-stone-500 hover:text-white transition-colors duration-500 ease-in-out">Message</div>
+            <div class="mx-auto w-[136px] px-7 md:px-10 py-2 mb-3 border-1 rounded-4xl text-xs font-bold text-center bg-white text-stone-6px-600 hover:bg-stone-500 hover:text-white transition-colors duration-500 ease-in-out">Follow</div>
+            <div class="mx-auto w-[136px] px-7 md:px-10 py-2 border-1 rounded-4xl text-xs font-bold text-center bg-white text-stone-500 hover:bg-stone-500 hover:text-white transition-colors duration-500 ease-in-out">Message</div>
           </div>
         </div>
         <div class="col-span-2 row-span-1 content-center text-center bg-orange-100 text-stone-500">
