--- a/src/day6/index.html
+++ b/src/day6/index.html
@@ -24,7 +24,7 @@
             <div class="mx-auto w-[136px] px-7 md:px-10 py-2 border-1 rounded-4xl text-xs font-bold text-center bg-white text-stone-500 hover:bg-stone-500 hover:text-white transition-colors duration-500 ease-in-out">Message</div>
           </div>
         </div>
-        <div class="col-span-2 row-span-1 content-center text-center bg-orange-100 text-stone-500">
+        <div class="col-span-2 row-span-1 content-center text-center bg-orange-100 text-stone-500 rounded-tr-lg">
           <div class="text-xl">523</div>
           <div class="font-extralight text-xs -mt-1 text-stone-400">Posts</div>
         </div>
@@ -32,7 +32,7 @@
           <div class="text-xl">1387</div>
           <div class="font-extralight text-xs -mt-1 text-stone-400">Likes</div>
         </div>
-        <div class="col-span-2 row-span-1 content-center text-center bg-orange-100 text-stone-500">
+        <div class="col-span-2 row-span-1 content-center text-center bg-orange-100 text-stone-500 rounded-br-lg">
           <div class="text-xl">146</div>
           <div class="font-extralight text-xs -mt-1 text-stone-400">Followers</div>
         </div>
