--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,19 @@
         <div class="hidden group-hover:block text-white text-md font-extrabold h-full w-full p-4 bg-zinc-600/75 justify-items-center">
           <div class="mb-2">Day 6</div>
           <div class="text-justify text-sm">
-            TBD
+            A very practical layout that was created using grid.  
+            The animated rotation of the borders around the profile picture was tricky to get right, still not sure it is the best approach.
+            Also used transitions for the hover over the buttons to look more smooth.
+          </div>
+        </div>
+      </a>
+
+      <a href="./day7/index.html" class="h-[300px] p-2 border-0 rounded-md bg-[url('../public/images/day7.png')] bg-cover bg-center justify-center items-end group">
+        <div class="hidden group-hover:block text-white text-md font-extrabold h-full w-full p-4 bg-zinc-600/75 justify-items-center">
+          <div class="mb-2">Day 7</div>
+          <div class="text-justify text-sm">
+            A nice little notification box.  It was fun figuring out all the little styling touches on this one.  
+            Got to reuse background radial again for both the search icon and the little blue circles by each notification.
           </div>
         </div>
       </a>
