adding day7 animation that I forgot

--- a/src/day7/index.html
+++ b/src/day7/index.html
@@ -23,29 +23,35 @@
             </div>
           </div>
         </div>
-        <div class="w-full h-4/5 pl-8 overflow-hidden">
-          <div class="w-full h-6 border-l-3 border-gray-200"></div>
-          <div class="flex flex-wrap group cursor-pointer">
-            <div class="relative -left-0.75 my-1 h-2.5 w-2.5 rounded-full bg-radial from-transparent to-[#6098cd] from-45% to-45% content-center"></div>
+        <div class="relative w-full h-4/5 pl-8 overflow-hidden">
+          <div class="absolute h-full w-full h-6 border-l-3 border-gray-200"></div>
+          <article class="flex flex-wrap group cursor-pointer mt-6 animate-[slideIn_0.4s_ease-in-out_1_forwards] opacity-0">
+            <div class="bg-white w-fit w-fit z-1">
+              <div class="relative -left-0.75 my-1 h-2.5 w-2.5 rounded-full bg-radial from-transparent to-[#6098cd] from-45% to-45% content-center"></div>
+            </div>
             <div class="pl-2 text-xs text-gray-500 content-center group-hover:text-[#6098cd]">9:24 AM</div>
-            <div class="pl-3.5 pr-18 flex-[100%] text-gray-500 w-full h-16 border-l-3 border-gray-200 group-hover:text-[#6098cd] justify-start">
+            <div class="pl-3.5 pr-18 flex-[100%] text-gray-500 w-full h-16 group-hover:text-[#6098cd] justify-start">
               <strong>John Walker</strong> posted a photo on your wall.
             </div>
-          </div>
-          <div class="flex flex-wrap group cursor-pointer">
-            <div class="relative -left-0.75 my-1 h-2.5 w-2.5 rounded-full bg-radial from-transparent to-[#6098cd] from-45% to-45% content-center"></div>
+          </article>
+          <article class="flex flex-wrap group cursor-pointer animate-[slideIn_0.4s_ease-in-out_0.2s_1_forwards] opacity-0">
+            <div class="bg-white w-fit w-fit z-1">
+              <div class="relative -left-0.75 my-1 h-2.5 w-2.5 rounded-full bg-radial from-transparent to-[#6098cd] from-45% to-45% content-center"></div>
+            </div>
             <div class="pl-2 text-xs text-gray-500 content-center group-hover:text-[#6098cd]">9:24 AM</div>
-            <div class="pl-3.5 pr-20 flex-[100%] text-gray-500 w-full h-16 border-l-3 border-gray-200 group-hover:text-[#6098cd] justify-start">
+            <div class="pl-3.5 pr-20 flex-[100%] text-gray-500 w-full h-16 group-hover:text-[#6098cd] justify-start">
               <strong>Alice Parker</strong> commented on your last post.
             </div>
-          </div>
-          <div class="flex flex-wrap group cursor-pointer">
-            <div class="relative -left-0.75 my-1 h-2.5 w-2.5 rounded-full bg-radial from-transparent to-[#6098cd] from-45% to-45% content-center"></div>
+          </article>
+          <article class="flex flex-wrap group cursor-pointer animate-[slideIn_0.4s_ease-in-out_0.4s_1_forwards] opacity-0">
+            <div class="bg-white w-fit w-fit z-1">
+              <div class="relative -left-0.75 my-1 h-2.5 w-2.5 rounded-full bg-radial from-transparent to-[#6098cd] from-45% to-45% content-center"></div>
+            </div>
             <div class="pl-2 text-xs text-gray-500 content-center group-hover:text-[#6098cd]">9:24 AM</div>
-            <div class="pl-3.5 flex-[100%] text-gray-500 w-full h-16 border-l-3 border-gray-200 group-hover:text-[#6098cd] justify-start">
+            <div class="pl-3.5 flex-[100%] text-gray-500 w-full h-16 group-hover:text-[#6098cd] justify-start">
               <strong>Luke Wayne</strong> added you as a friend.
             </div>
-          </div>
+          </article>
         </div>
       </div>
     </div>
