--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
           </div>
         </div>
       </a>
+
       <a href="./day2/index.html" class="h-[300px] p-2 border-0 rounded-md bg-[url('../public/images/day2.gif')] bg-cover bg-center justify-center items-end group">
         <div class="hidden group-hover:block text-white text-md font-extrabold h-full w-full p-4 bg-zinc-600/75 justify-items-center">
           <div class="mb-2">Day 2</div>
@@ -35,6 +36,7 @@
           </div>
         </div>
       </a>
+
       <a href="./day3/index.html" class="h-[300px] p-2 border-0 rounded-md bg-[url('../public/images/day3.gif')] bg-cover bg-center justify-center items-end group">
         <div class="hidden group-hover:block text-white text-md font-extrabold h-full w-full p-4 bg-zinc-600/75 justify-items-center">
           <div class="mb-2">Day 3</div>
@@ -44,6 +46,7 @@
           </div>
         </div>
       </a>
+
       <a href="./day4/index.html" class="h-[300px] p-2 border-0 rounded-md bg-[url('../public/images/day4.gif')] bg-cover bg-center justify-center items-end group">
         <div class="hidden group-hover:block text-white text-md font-extrabold h-full w-full p-4 bg-zinc-600/75 justify-items-center">
           <div class="mb-2">Day 4</div>
@@ -52,6 +55,7 @@
           </div>
         </div>
       </a>
+
       <a href="./day5/index.html" class="h-[300px] p-2 border-0 rounded-md bg-[url('../public/images/day5.png')] bg-cover bg-center justify-center items-end group">
         <div class="hidden group-hover:block text-white text-md font-extrabold h-full w-full p-4 bg-zinc-600/75 justify-items-center">
           <div class="mb-2">Day 5</div>
@@ -62,6 +66,7 @@
           </div>
         </div>
       </a>
+
       <a href="./day6/index.html" class="h-[300px] p-2 border-0 rounded-md bg-[url('../public/images/day6.png')] bg-cover bg-center justify-center items-end group">
         <div class="hidden group-hover:block text-white text-md font-extrabold h-full w-full p-4 bg-zinc-600/75 justify-items-center">
           <div class="mb-2">Day 6</div>
@@ -79,6 +84,18 @@
           <div class="text-justify text-sm">
             A nice little notification box.  It was fun figuring out all the little styling touches on this one.  
             Got to reuse background radial again for both the search icon and the little blue circles by each notification.
+          </div>
+        </div>
+      </a>
+
+      <a href="./day8/index.html" class="h-[300px] p-2 border-0 rounded-md bg-[url('../public/images/day8.gif')] bg-cover bg-center justify-center items-end group">
+        <div class="hidden group-hover:block text-white text-md font-extrabold h-full w-full p-4 bg-zinc-600/75 justify-items-center">
+          <div class="mb-2">Day 8</div>
+          <div class="text-justify text-sm">
+            Wow this one was tricky! Figuring out how to first animate them to no just orbit around the center, but on an offset point was tricky to figure out.  Gonna give a shoutout to my boi transform-origin for the heavy lifting there.
+            Make good use of css variables in this one to add a bit of randomness to it all.
+            And to really get the gooey center feeling took a lot of adjustments and did a little bit of transform scaleY.
+            I definitely felt myself flexing my css muscles here.
           </div>
         </div>
       </a>
